--- a/UI_Files/Main.ui
+++ b/UI_Files/Main.ui
@@ -214,15 +214,22 @@
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
+           <item row="2" column="0">
+            <widget class="QLabel" name="u_lbl">
+             <property name="text">
+              <string>Upper Limit</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="l_limit"/>
+           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="l_lbl">
              <property name="text">
               <string>Lower Limit</string>
              </property>
             </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="l_limit"/>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="des_lbl">
@@ -231,15 +238,15 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="u_lbl">
-             <property name="text">
-              <string>Upper Limit</string>
-             </property>
-            </widget>
-           </item>
            <item row="2" column="1">
             <widget class="QSpinBox" name="u_limit"/>
+           </item>
+           <item row="3" column="1">
+            <widget class="QComboBox" name="des_data">
+             <property name="editable">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
            <item row="0" column="0" colspan="2">
             <widget class="QLabel" name="salary_lbl">
@@ -254,10 +261,10 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <widget class="QComboBox" name="des_data">
-             <property name="editable">
-              <bool>true</bool>
+           <item row="4" column="0" colspan="2">
+            <widget class="QPushButton" name="save_btn">
+             <property name="text">
+              <string>Save</string>
              </property>
             </widget>
            </item>
