--- a/UI_Files/Main.ui
+++ b/UI_Files/Main.ui
@@ -214,6 +214,13 @@
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
+           <item row="1" column="0">
+            <widget class="QLabel" name="l_lbl">
+             <property name="text">
+              <string>Lower Limit</string>
+             </property>
+            </widget>
+           </item>
            <item row="2" column="0">
             <widget class="QLabel" name="u_lbl">
              <property name="text">
@@ -224,10 +231,10 @@
            <item row="1" column="1">
             <widget class="QSpinBox" name="l_limit"/>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="l_lbl">
-             <property name="text">
-              <string>Lower Limit</string>
+           <item row="3" column="1">
+            <widget class="QComboBox" name="des_data">
+             <property name="editable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -241,10 +248,10 @@
            <item row="2" column="1">
             <widget class="QSpinBox" name="u_limit"/>
            </item>
-           <item row="3" column="1">
-            <widget class="QComboBox" name="des_data">
-             <property name="editable">
-              <bool>true</bool>
+           <item row="4" column="0" colspan="2">
+            <widget class="QPushButton" name="open_btn">
+             <property name="text">
+              <string>Open</string>
              </property>
             </widget>
            </item>
@@ -261,10 +268,17 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0" colspan="2">
-            <widget class="QPushButton" name="open_btn">
+           <item row="6" column="0" colspan="2">
+            <widget class="QPushButton" name="del_btn">
              <property name="text">
-              <string>Open</string>
+              <string>Delete</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0" colspan="2">
+            <widget class="QPushButton" name="new_btn">
+             <property name="text">
+              <string>New</string>
              </property>
             </widget>
            </item>
