Admin Emp edit page

--- a/UI_Files/Main.ui
+++ b/UI_Files/Main.ui
@@ -338,7 +338,14 @@
       <widget class="QWidget" name="Admin_EMP_Page">
        <layout class="QGridLayout" name="gridLayout_6">
         <item row="2" column="3">
-         <widget class="QLineEdit" name="emp_salary_value_ad"/>
+         <widget class="QSpinBox" name="emp_salary_value_ad"/>
+        </item>
+        <item row="2" column="4">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Date of Joining: </string>
+          </property>
+         </widget>
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_3">
@@ -354,8 +361,12 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="3">
-         <widget class="QLineEdit" name="emp_desig_text_ad"/>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Designation: </string>
+          </property>
+         </widget>
         </item>
         <item row="3" column="3">
          <widget class="QComboBox" name="emp_gender_value_ad">
@@ -378,18 +389,12 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QLineEdit" name="emp_name_text_ad"/>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label">
+        <item row="3" column="4">
+         <widget class="QLabel" name="label_4">
           <property name="text">
-           <string>Designation: </string>
+           <string>Age: </string>
           </property>
          </widget>
-        </item>
-        <item row="3" column="5">
-         <widget class="QSpinBox" name="emp_age_value_ad"/>
         </item>
         <item row="4" column="0">
          <widget class="QLabel" name="label_5">
@@ -398,15 +403,30 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="4">
-         <widget class="QLabel" name="label_4">
+        <item row="4" column="3">
+         <widget class="QComboBox" name="emp_dept_value_ad"/>
+        </item>
+        <item row="3" column="5">
+         <widget class="QSpinBox" name="emp_age_value_ad"/>
+        </item>
+        <item row="2" column="5">
+         <widget class="QDateEdit" name="emp_doj_value_ad"/>
+        </item>
+        <item row="4" column="4">
+         <widget class="QLabel" name="label_6">
           <property name="text">
-           <string>Age: </string>
+           <string>Experience: </string>
           </property>
          </widget>
         </item>
-        <item row="4" column="3">
-         <widget class="QComboBox" name="emp_dept_value_ad"/>
+        <item row="1" column="3" colspan="3">
+         <widget class="QLineEdit" name="emp_desig_value_ad"/>
+        </item>
+        <item row="4" column="5">
+         <widget class="QSpinBox" name="emp_exp_value_ad"/>
+        </item>
+        <item row="0" column="3" colspan="3">
+         <widget class="QLineEdit" name="emp_name_value_ad"/>
         </item>
        </layout>
       </widget>
