Bug Fixes and UI/UX improvements

--- a/UI_Files/Main.ui
+++ b/UI_Files/Main.ui
@@ -29,19 +29,14 @@
       </property>
       <widget class="QWidget" name="Open_File">
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0">
-         <widget class="QPushButton" name="opendb_btn">
-          <property name="text">
-           <string>Open existing Employee DB</string>
-          </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>../Icons/open.png</normaloff>../Icons/open.png</iconset>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
+        <item row="2" column="1">
          <widget class="QPushButton" name="newdb_btn">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
           <property name="text">
            <string>New Employee DB</string>
           </property>
@@ -50,6 +45,83 @@
             <normaloff>../Icons/new.png</normaloff>../Icons/new.png</iconset>
           </property>
          </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QPushButton" name="opendb_btn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>50</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Open Employee DB</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>../Icons/open.png</normaloff>../Icons/open.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_15">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>100</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap>../Icons/Logo.png</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
