--- a/UI_Files/Main.ui
+++ b/UI_Files/Main.ui
@@ -22,34 +22,17 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="1" column="3">
+    <item row="1" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
        <number>0</number>
       </property>
       <widget class="QWidget" name="Open_File">
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="2" column="1">
-         <widget class="QPushButton" name="newdb_btn">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>New Employee DB</string>
-          </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>../Icons/new.png</normaloff>../Icons/new.png</iconset>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1">
+        <item row="2" column="1" colspan="3">
          <widget class="QPushButton" name="opendb_btn">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -69,7 +52,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="2">
+        <item row="4" column="4">
          <spacer name="horizontalSpacer_4">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -82,17 +65,17 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="1" colspan="2">
          <widget class="QLabel" name="label_15">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+            <horstretch>141</horstretch>
+            <verstretch>100</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>141</width>
             <height>100</height>
            </size>
           </property>
@@ -100,7 +83,7 @@
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap>../Icons/Logo.png</pixmap>
+           <pixmap>../Icons/Hero.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -110,7 +93,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -122,6 +105,23 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="3" column="1" colspan="3">
+         <widget class="QPushButton" name="newdb_btn">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>New Employee DB</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>../Icons/new.png</normaloff>../Icons/new.png</iconset>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
